# Project_Chimera_3Day_Challenge

./: .gitignore  Dockerfile  Makefile  PROJECT_STATUS.md  README.md  openclaw_integration.md  pyproject.toml  technical.md
.github/: main.yml
.github/workflows/: main.yml
config/: AUTO_COMMIT_STATUS.md  auto-commit.sh  setup-auto-commit.sh
docs/: AUTO_COMMIT_GUIDE.md  DEVELOPMENT.md  ELON_PRINCIPLES.md  PROJECT_CHARTER.md  SPRINT_TRACKER.md  TAO_PRINCIPLES.md  TESTING.md
logs/: autocommit.out
research/: architecture_strategy.md  research_summary.md
skills/: README.md
skills/skill_content_generation/: README.md
skills/skill_social_publishing/: README.md
skills/skill_trend_analysis/: README.md
specs/: SPEC_TEMPLATE.md  _meta.md  functional.md
tests/unit/: test_skills_interface.py  test_trend_fetcher.py
