[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "project-chimera"
version = "0.1.0"
description = "Autonomous AI Influencer Network - Agentic infrastructure for multi-agent social media management"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    # Core async/web framework
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    
    # AI/LLM
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
    "openai>=1.12.0",
    
    # Database
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.0",
    
    # Vector database
    "weaviate-client>=4.4.0",
    
    # Data processing
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    
    # HTTP clients
    "httpx>=0.26.0",
    "aiohttp>=3.9.0",
    
    # Configuration
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    
    # Monitoring/Logging
    "structlog>=24.1.0",
    
    # Testing
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "ipython>=8.20.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ['py311']

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"