[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-chimera"
version = "0.1.0"
description = "Autonomous AI Influencer Network"
requires-python = ">=3.11"

dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "anthropic>=0.18.0",
    "google-generativeai>=0.3.0",
    "openai>=1.12.0",
    "asyncpg>=0.29.0",
    "redis[hiredis]>=5.0.0",
    "weaviate-client>=4.4.0",
    "pandas>=2.2.0",
    "httpx>=0.26.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "structlog>=24.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.2.0",
    "black>=24.0.0",
    "mypy>=1.8.0",
    "ipython>=8.20.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["services*", "skills*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]